--- a/remote-addon/config.json
+++ b/remote-addon/config.json
@@ -1,6 +1,6 @@
 {
   "name": "eWeLink-Remote Gateway Dev",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "slug": "ewelink_remote",
   "description": "eWeLink-Remote Gateway Dev Add-on supports adding eWeLink-Remote sub-devices R5, R5W, S-Mate, S-Mate2 to Home Assistant as trigger conditions for automation",
   "startup": "application",
@@ -47,6 +47,7 @@
       "password": "str?"
     }
   },
-  "image": "ghcr.io/h1355054467/remote-ihost-test-{arch}",
-  "host_dbus": true
+  "image": "ghcr.io/ihost-open-source-project/hassio-ihost-addon-{arch}",
+  "host_dbus": true,
+  "homeassistant": "2025.9.2"
 }
